src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-jp: var(--font-jp);
  --font-en: var(--font-en);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

main {
  padding-top: 50px;
}

html {
  scroll-padding-top: 80px;
}

body {
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

@layer base {
  h1 {
    @apply text-4xl font-bold tracking-tight mb-6;
  }

  h2 {
    @apply text-2xl font-semibold tracking-tight mb-4;
  }

  h3 {
    @apply text-xl font-medium mb-3;
  }

  p {
    @apply leading-8 mb-4;
  }

  a {
    @apply transition-opacity hover:opacity-80;
  }

  time {
    @apply text-sm text-gray-400;
  }
}

